src/assets/styles/index.scss
@import "bootstrap-variables";

@keyframes bounceit {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(10px);
  }
}
@-webkit-keyframes bounceit {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(10px);
  }
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: $white;
  word-spacing: 0.1em; // Because the font has weird spacing which is hard to read.
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

section {
  padding: 40px 0;
  @include media-breakpoint-up(lg){
    padding: 130px 0;
  }
}

.gradient-container {
  background: -webkit-radial-gradient(left 50%, shade-color($primary, 75%), $black 50%);
  background: radial-gradient(at left 50%, shade-color($primary, 75%), $black 50%);
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
  text-transform: uppercase;
}

h1, .h1 {
  color: $primary;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: $black;
  text-shadow: 2px -2px $primary;

  @include media-breakpoint-up(md) {
    -webkit-text-stroke-width: 3px;
    text-shadow: 3px -3px $primary;
  }
}

.btn {
  text-transform: uppercase;
  font-weight: bold !important;
  padding: 0.7rem 2rem !important;
  word-spacing: .1em;

  &:focus {
    box-shadow: unset !important;
  }
}

.btn-sm {
  padding: .3rem 2rem !important;
}

.btn-outline-dark {
  &:hover {
    background-color: $primary !important;
    border-color: $primary !important;
  }
}

.btn-primary {
  color: $white !important;

  &:hover {
    background-color: shade-color($primary, $btn-hover-bg-tint-amount) !important;
    border-color: shade-color($primary, $btn-hover-bg-tint-amount) !important;
  }
}

.input-group .btn {
  background-color: $white !important;
  border-width: 0 !important;
  color: $black !important;

  &:before {
    content: '';
    height: 50%;
    border-left: 2px solid $black;
    padding-right: 2rem;
  }

  &:hover {
    color: $primary !important;
    border-width: 0 !important;
  }
}

.social-buttons {
  .svg-inline--fa {
    height: 2rem;
  }
}

.bounce-button {
  animation: bounceit 500ms infinite alternate;
  -webkit-animation: bounceit 500ms infinite alternate;
}

.svg-inline--fa {
  margin: 0 0.5rem;
}

